crates/nirvash-macros/tests/fixtures/code_tests_legacy_harness.stderr
error: harness = ... is no longer supported; use binding = ... and implement ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_harness.rs:119:46
    |
119 | #[code_tests(spec = Spec, binding = Binding, harness = tests::Harness)]
    |                                              ^^^^^^^
